--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="navbar"></div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="sidebarLeft"></div>
+        <div class="files">
+            <div class="label"></div>
+            <div class="suggested"></div>
+            <div class="fileList"></div>
+        </div>
+        <div class="sidebarRight"></div>
+    </div>
 </body>
 </html>
