--- a/index.html
+++ b/index.html
@@ -8,15 +8,67 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="navbar"></div>
-    <div class="content">
-        <div class="sidebarLeft"></div>
-        <div class="files">
-            <div class="label"></div>
-            <div class="suggested"></div>
-            <div class="fileList"></div>
+    <div class="toolbar">
+        <div class="logo">
+            <div class="logoSymbol"></div>
+            <span class="logoText">Drive</span>
         </div>
-        <div class="sidebarRight"></div>
+        <div class="searchBar">
+            <div class="searchBarSymbol"></div>
+            <span class="searchBarText">Search in Drive</span>
+            <div class="searchBarFilter"></div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="sidebar">
+            <div class="createNew">
+                <div class="createNewSymbol"></div>
+                <span class="createNewText">New</span>
+            </div>
+            <div class="navbar">
+                <div class="navbarPriority">
+                    <div class="navbarPrioritySymbol"></div>
+                    <span>Priority</span>
+                </div>
+                <div class="navbarMyDrive">
+                    <div class="navbarMyDriveSymbol"></div>
+                    <span>My Drive</span>
+                </div>
+                <div class="navbarSharedWithMe">
+                    <div class="navbarSharedWithMeSymbol"></div>
+                    <span>Shared with me</span>
+                </div>
+                <div class="navbarRecent">
+                    <div class="navbarRecentSymbol"></div>
+                    <span>Recent</span>
+                </div>
+                <div class="navbarStarred">
+                    <div class="navbarStarredSymbol"></div>
+                    <span>Starred</span>
+                </div>
+                <div class="navbarTrash">
+                    <div class="navbarTrashSymbol"></div>
+                    <span>Trash</span>
+                </div>
+            </div>
+            <div class="storage">
+                <div class="storageLabel">
+                    <div class="storageSymbol"></div>
+                    <span>Storage</span>
+                </div>
+                <div class="storageUsage">
+                    <div class="storageUsageBar"></div>
+                    <div class="storageUsageLabel"></div>
+                </div>
+                <div class="storageBuy"></div>
+            </div>
+        </div>
+        <div class="files">
+            <div class="filesTitle"></div>
+            <div class="filesSuggested"></div>
+            <div class="filesList"></div>
+        </div>
+        <!--<div class="add-ons"></div>-->
     </div>
 </body>
 </html>
